--- a/build
+++ b/build
@@ -1,2 +1,2 @@
-ics -j all.js -c vec2.iced jengine.iced game.iced
+ics -j all.js -c utils.iced vec2.iced jengine.iced game.iced
 uglify all.js > game.min.js
